# attor

./: .gitignore  attor.db  attor.py  pyproject.toml  readme.md  test.db  validate_all.sh
attor/: __init__.py  __main__.py  blocks.py  db.py  report.py  sympla.py  utils.py
tests/: test_attor.py
tests/assets/Presenças/: Capture The Flag.xlsx
tests/assets/Presenças/Minicursos/0930/: Matutino.xlsx  Noturno.xlsx
tests/assets/Presenças/Minicursos/1001/: Matutino.xlsx
tests/assets/Presenças/Minicursos/1002/: Matutino.xlsx
tests/assets/Presenças/Minicursos/1003/: Matutino.xlsx
tests/assets/Presenças/Minicursos/1004/: Maratona.xlsx
tests/assets/Presenças/Palestras/0930/: Bloco1.xlsx  Bloco2.xlsx  Bloco3.xlsx
tests/assets/Presenças/Palestras/1001/: Bloco1.xlsx  Bloco2.xlsx  Bloco3.xlsx
tests/assets/Presenças/Palestras/1002/: Bloco1.xlsx  Bloco2.xlsx  Bloco3.xlsx  Bloco4.xlsx
tests/assets/Presenças/Palestras/1003/: Bloco3.xlsx  Bloco4.xlsx
tests/assets/Presenças/Palestras/1004/: Bloco1.xlsx  Bloco2.xlsx
