[tool.poetry]
name = "attor"
version = "0.1.0"
description = "UFSC's CAGR Attendance Validator from Sympla check-in list."
authors = ["João Paulo Taylor Ienczak Zanette <jpaulotiz@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
cagrex = { git = "https://github.com/caravelahc/cagrex.git", branch = "dev-class-members" }
openpyxl = "^3.0"

[tool.poetry.dev-dependencies]
pytest = "^3.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
