[tool.poetry]
name = "attor"
version = "0.1.2"
description = "UFSC's CAGR Attendance Validator from Sympla check-in list."
authors = ["João Paulo Taylor Ienczak Zanette <jpaulotiz@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
cagrex = { git = "https://github.com/caravelahc/cagrex.git", branch = "dev-class-members" }
openpyxl = "^3.0"
carl = "^0.0.7"

[tool.poetry.dev-dependencies]
pytest = "^3.0"
flake8 = "^3.7"
mypy = "^0.730.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
